--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp",
+  "name": "temp2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,9 +17,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "jquery": "^3.3.1",
-    "vue-template-compiler": "^2.5.17",
-    "webpack-bundle-tracker": "^0.4.2-beta"
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
